--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <li>GitHub account:<a href="https;//github.com/s-mori">https;//github.com/s-mori</a></li>
           <li>Qiita account:<a href="http://qiita.com/s-mori">http://qiita.com/s-mori</a></li>
   		</ul>
+					 <li>yoshi</li>
+        <ul>
+          <li>GitHub account:<a href="https;//github.com/R-Yoshi0701">https;//github.com/R-Yoshi0701</a></li>
+  		</ul>
       </ul>
     </div>
   </body>
